done with sort filter and search

--- a/smashbath/frontend/HTML/index.html
+++ b/smashbath/frontend/HTML/index.html
@@ -39,7 +39,7 @@
         <div id="options">
             <a href="./HTML/TOPoffers.html">TOP OFFERS</a>
             <a href="./HTML/Bodaycare.html" id="touch">BODY CARE</a>
-            <a href="./HTML/candlespage.html">CANDELS</a>
+            <a href="../HTML/candle.html">CANDELS</a>
             <a href="./HTML/wallflowerspage.html">WALLFLOWERS & AIR FRESHENERS</a>
             <a href="./HTML/hands&soappage.html">HAND SOAPS & SANITIZERS</a>
             <a href="./HTML/Men'spage.html">MEN'S SHOP</a>
